<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GSB-CR-Visiteur-02</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvMatricule">Matricule</string>
    <string name="tvMDP">Mot de Passe</string>
    <string name="bConnecter">Se Connecter</string>
    <string name="bAnnuler">Annuler</string>
    <string name="title_activity_menu_gsb">MenuGsbActivity</string>
    <string name="bConsulter">Consulter un rapport de visite</string>
    <string name="bSaisir">Saisir un rapport de visite </string>
    <string name="bDeconnecter">Se Déconnecter</string>
    <string name="title_activity_rechercher_rapport_visite">RechercherRapportVisiteActivity</string>
    <string name="tvMois">Mois</string>
    <string name="tvAnnee">Annee</string>
    <string name="bAfficher">Afficher la liste des rapports</string>
    <string name="bRetour">Retour</string>
    <string name="title_activity_visu_liste_rapports_visites">VisuListeRapportsVisitesActivity</string>
    <string name="title_activity_visu_rapport_visite">VisuRapportVisiteActivity</string>
    <string name="numero">Numéro :</string>
    <string name="praticien">Praticien :</string>
    <string name="title_activity_saisie_rapport_visite">SaisieRapportVisiteActivity</string>
    <string name="bValider">Valider</string>
    <string name="motif">Motif :</string>
    <string name="bilan">Bilan :</string>
    <string name="coefConfiance">Coefficient de confiance</string>
    <string name="bEchantillon">Echantillon</string>
    <string name="bModifierDate">Modifier date</string>
    <string name="tvDateVisite">Date de la visite : </string>
    <string name="title_activity_saisie_echantillons_offerts">SaisieEchantillonsOffertsActivity</string>

</resources>
