<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.gsb.cr.SaisieRapportVisiteActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/tvDateVisite"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		        <TextView
		            android:id="@+id/tvDateVisite"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text=""
		            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    	</LinearLayout>
	
		    <Button
		        android:id="@+id/bModifierDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bModifierDate"
		        android:onClick="changerDate" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/praticien"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <Spinner
		        android:id="@+id/spPraticien"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/motif"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <Spinner
		        android:id="@+id/spMotif"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bilan"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <EditText
		        android:id="@+id/etBilan"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textMultiLine" >
		
		        <requestFocus />
		    </EditText>
		
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/coefConfiance"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <Spinner
		        android:id="@+id/spCoefConfiance"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		    <Button
		        android:id="@+id/bEchantillon"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/bEchantillon"
		        android:onClick="echantillon" />
		
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
	
		        <Button
		            android:id="@+id/bValider"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/bValider"
		            android:onClick="valider" />
		
		        <Button
		            android:id="@+id/bAnnuler"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/bAnnuler"
		            android:onClick="retour" />
	
	    	</LinearLayout>
	            
	            
		</LinearLayout>
    </ScrollView>

    

</LinearLayout>
