<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.gsb.cr.RechercherRapportVisiteActivity" >

    <TextView
        android:id="@+id/tvMois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMois"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spMois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAnnee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAnnee"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spAnnee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bAfficher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="afficher"
        android:text="@string/bAfficher" />

    <Button
        android:id="@+id/bRetourVisuListeRapportsVisite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="retour"
        android:text="@string/bRetour" />

</LinearLayout>
