<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.gsb.cr.MainActivity" >

    <TextView
        android:id="@+id/tvAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvMatricule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMatricule"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etMatricule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />


    <TextView
        android:id="@+id/tvMDP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMDP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etMDP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bConnecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="seConnecter"
            android:text="@string/bConnecter" />

        <Button
            android:id="@+id/bAnnuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="annuler"
            android:text="@string/bAnnuler" />

    </LinearLayout>

</LinearLayout>
