<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.gsb.cr.MenuGsbActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvPrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <Button
        android:id="@+id/bConsulter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="consulter"
        android:text="@string/bConsulter" />

    <Button
        android:id="@+id/bSaisir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saisir"
        android:text="@string/bSaisir" />

    <Button
        android:id="@+id/bDeconnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deconnecter"
        android:text="@string/bDeconnecter" />

</LinearLayout>
